# bud2-saas

./: .env.docker.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yml  go.work.sum
agents/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  openapi-python-client.yml  pyproject.toml
agents/alembic/: env.py
agents/alembic/versions/: 154b9c5d4b0c_create_agent_runtime_schema.py
agents/src/bud2/: __init__.py  config.py  main.py
agents/src/bud2/api/: __init__.py  health.py  server.py  whatsapp_webhook.py
agents/src/bud2/api/whatsapp/: webhook.py
agents/src/bud2/app/: __init__.py  instructions.py  root_agent.py
agents/src/bud2/app/runtime/: agent.py  instructions.py  service.py
agents/src/bud2/auth/: __init__.py  oauth_delegated.py  static_token.py
agents/src/bud2/channels/whatsapp/: __init__.py  parser.py  sender.py
agents/src/bud2/clients/bud2/: __init__.py  auth.py  client.py
agents/src/bud2/db/: __init__.py  migrate.py
agents/src/bud2/domain/: __init__.py  conversation.py  webhook_event.py
agents/src/bud2/domain/agent_run/: models.py
agents/src/bud2/domain/channel/: models.py
agents/src/bud2/domain/delivery/: models.py
agents/src/bud2/domain/message/: models.py
agents/src/bud2/infra/auth/: credentials.py  oauth_delegated.py  static_token.py
agents/src/bud2/infra/bud2/: auth.py  client.py  errors.py
agents/src/bud2/infra/observability/: tracing.py
agents/src/bud2/infra/postgres/: migrate.py  models.py  pool.py  repositories.py  session.py
agents/src/bud2/observability/: logging.py
agents/tests/: conftest.py
agents/tests/bud2/: test_config.py
agents/tests/bud2/api/: test_health.py
backend/: Dockerfile  (+6 more)
(+870 files in other folders)
